--- a/Techtree/Views/Shared/_Layout.cshtml
+++ b/Techtree/Views/Shared/_Layout.cshtml
@@ -24,16 +24,13 @@
         <link href="~/css/NewStyle.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
-        @*<link href="~/lib/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" />*@
+        @*
+        <link href="~/lib/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" />*@
 
-        <link rel="stylesheet"
-              href="http://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/twitter-bootstrap/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only"
-              asp-fallback-test-property="position"
-              asp-fallback-test-value="absolute"
-              integrity=""
-              crossorigin="anonymous">
+        <link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+            asp-fallback-href="~/lib/twitter-bootstrap/css/bootstrap.min.css" asp-fallback-test-class="sr-only"
+            asp-fallback-test-property="position" asp-fallback-test-value="absolute" integrity=""
+            crossorigin="anonymous">
 
         <link href="~/css/site.min.css" rel="stylesheet" />
     </environment>
