--- a/Techtree/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Techtree/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,39 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Required Meta Tags -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- Title -->
-    <title>@ViewData["Title"] - Tech Solutions | Muhammad Mubashir</title>
-    <!-- Bootstrap Core CSS -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - Techtree</title>
     <link rel="stylesheet" type="text/css" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <!-- Animate CSS -->
-    <link rel="stylesheet" type="text/css"
-          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" />
-
-    <!-- Owl Carousel -->
     <link rel="stylesheet" type="text/css" href="~/css/site.css" />
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
-
-    <environment include="Development">
-        <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
-        <link href="~/css/Site.css" rel="stylesheet" />
-        <link href="~/css/NewStyle.css" rel="stylesheet" />
-    </environment>
-    <environment exclude="Development">
-        @*
-            <link href="~/lib/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" />*@
-
-        <link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/twitter-bootstrap/css/bootstrap.min.css" asp-fallback-test-class="sr-only"
-              asp-fallback-test-property="position" asp-fallback-test-value="absolute" integrity=""
-              crossorigin="anonymous">
-
-        <link href="~/css/site.min.css" rel="stylesheet" />
-    </environment>
-
 </head>
 <body>
     <header>
