--- a/Techtree/Views/Shared/_AdminMenuPartial.cshtml
+++ b/Techtree/Views/Shared/_AdminMenuPartial.cshtml
@@ -42,7 +42,7 @@
 <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle text-dark" href="#" data-toggle="dropdown"> Admin </a>
     <ul class="dropdown-menu fade-up">
-        <li><a class="dropdown-item" href="#">Categories</a></li>
+        <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Categories</a></li>
         <li><a class="dropdown-item" href="#"> Users To Categories </a></li>
         <div class="dropdown-divider"></div>
         <li><a class="dropdown-item" href="#"> Media Types </a></li>
