--- a/Techtree/Views/Shared/_Layout.cshtml
+++ b/Techtree/Views/Shared/_Layout.cshtml
@@ -8,13 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Title -->
     <title>@ViewData["Title"] - Tech Solutions | Muhammad Mubashir</title>
-
-
+    <!-- Development Environment -->
     <environment include="Development">
-        <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
+        <link rel="stylesheet" type="text/css" href="~/lib/bootstrap/css/bootstrap.css" />
+        <link rel="stylesheet" type="text/css" href="~/lib/bootstrap/css/bootstrap.css" />
         <link rel="stylesheet" type="text/css" href="~/css/site.css" />
         <link rel="stylesheet" type="text/css" href="~/css/style.css" />
     </environment>
+    <!-- Production Environment -->
     <environment exclude="Development">
         <link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/bootstrap/4.6.0/css/bootstrap.min.css"
             asp-fallback-href="~/lib/bootstrap/css/bootstrap.min.css" asp-fallback-test-class="sr-only"
@@ -30,7 +31,9 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Techtree</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <span>Tech</span>Solutions
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
