--- a/Techtree/Areas/Admin/Views/Category/Index.cshtml
+++ b/Techtree/Areas/Admin/Views/Category/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table table-hover myTable">
     <thead>
         <tr>
             <th>
@@ -21,28 +21,30 @@
             <th>
                 @Html.DisplayNameFor(model => model.ThumbnailImage)
             </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @*@Html.DisplayFor(modelItem => item.ThumbnailImage)*@
-                <img src="@item.ThumbnailImage" class="img-fluid" alt="" />
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ThumbnailImage)
+                    @* <img src="@item.ThumbnailImage" class="img-fluid" alt="" /> *@
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>|
+                    <a asp-controller="CategoryItem" asp-action="Index" asp-route-categoryId="@item.Id">Update Items</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
