--- a/Techtree/Areas/Admin/Views/CategoryItem/Create.cshtml
+++ b/Techtree/Areas/Admin/Views/CategoryItem/Create.cshtml
@@ -4,34 +4,32 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Create Category Item</h1>
 
-<h4>CategoryItem</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+            <input type="hidden" asp-for="CategoryId" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
+                <label asp-for="Title" class="font-weight-bold"></label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
+                <label asp-for="Description" class="font-weight-bold"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
+                <label asp-for="MediaTypeId" class="font-weight-bold"></label>
+                <select asp-for="MediaTypeId" class="form-control" asp-items="@Model.MediaTypes">
+                    <option value=""> ---- Please Select A Mediatype ----</option>
+                </select>
             </div>
             <div class="form-group">
-                <label asp-for="MediaTypeId" class="control-label"></label>
-                <select asp-for="MediaTypeId" class ="form-control" asp-items="ViewBag.MediaTypeId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="DateTimeItemReleased" class="control-label"></label>
+                <label asp-for="DateTimeItemReleased" class="font-weight-bold"></label>
                 <input asp-for="DateTimeItemReleased" class="form-control" />
                 <span asp-validation-for="DateTimeItemReleased" class="text-danger"></span>
             </div>
@@ -43,7 +41,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-route-categoryId="@Model.CategoryId">Back to List</a>
 </div>
 
 @section Scripts {
