--- a/Techtree/Areas/Admin/Views/CategoryItem/Index.cshtml
+++ b/Techtree/Areas/Admin/Views/CategoryItem/Index.cshtml
@@ -7,9 +7,11 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-outline-success" asp-action="Create" asp-route-categoryId="@ViewBag.CategoryId">
+        <i class="fa fa-plus"></i> Add New Item
+    </a>
 </p>
-<table class="table">
+<table class="table table-hover myTable">
     <thead>
         <tr>
             <th>
@@ -21,27 +23,39 @@
             <th>
                 @Html.DisplayNameFor(model => model.DateTimeItemReleased)
             </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateTimeItemReleased)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateTimeItemReleased)
+                </td>
+                <td>
+                    <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a class="btn btn-sm btn-dark" asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a class="btn btn-sm btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+
+                    @if (item.ContentId == 0)
+                    {
+                        <a class="btn btn-sm btn-warning" asp-controller="Content" asp-action="Create" asp-route-categoryItemid="@item.Id"
+                           asp-route-categoryId="@item.CategoryId">Add Content</a>
+                    }
+                    else
+                    {
+                        <a class="btn btn-sm btn-info" asp-controller="Content" asp-action="Edit" asp-route-categoryItemid="@item.Id"
+                           asp-route-categoryId="@item.CategoryId">Edit Content</a>
+                    }
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
