--- a/Techtree/Views/Shared/_Layout.cshtml
+++ b/Techtree/Views/Shared/_Layout.cshtml
@@ -19,7 +19,14 @@
 
     <environment include="Development">
         <link rel="stylesheet" type="text/css" href="~/lib/bootstrap/css/bootstrap.css" />
-        <link rel="stylesheet" type="text/css" href="~/lib/bootstrap/css/bootstrap.css" />
+        <link rel="stylesheet" type="text/css" href="~/lib/animate.css/animate.css" />
+        <link rel="stylesheet" type="text/css" href="~/lib/aos/aos.css" />
+        <link rel="stylesheet" type="text/css" href="~/lib/datatables/css/jquery.dataTables.css" />
+        <link rel="stylesheet" type="text/css" href="~/lib/datatables/css/dataTables.bootstrap4.css" />
+        <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.css" />
+        <link rel="stylesheet" type="text/css" href="~/lib/magnific-popup.js/magnific-popup.css" />
+        <link rel="stylesheet" type="text/css" href="~/lib/OwlCarousel2/assets/owl.carousel.css" />
+        <link rel="stylesheet" type="text/css" href="~/lib/OwlCarousel2/assets/owl.theme.default.css" />
         <link rel="stylesheet" type="text/css" href="~/css/site.css" />
         <link rel="stylesheet" type="text/css" href="~/css/style.css" />
     </environment>
@@ -27,6 +34,38 @@
     <environment exclude="Development">
         <link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/bootstrap/4.6.0/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/css/bootstrap.min.css" asp-fallback-test-class="sr-only"
+              asp-fallback-test-property="position" asp-fallback-test-value="absolute" integrity=""
+              crossorigin="anonymous">
+        <link rel="stylesheet" href="#"
+              asp-fallback-href="~/lib/animate.css/animate.min.css" asp-fallback-test-class="sr-only"
+              asp-fallback-test-property="position" asp-fallback-test-value="absolute" integrity=""
+              crossorigin="anonymous">
+        <link rel="stylesheet" href="#"
+              asp-fallback-href="~/lib/aos/aos.css" asp-fallback-test-class="sr-only"
+              asp-fallback-test-property="position" asp-fallback-test-value="absolute" integrity=""
+              crossorigin="anonymous">
+        <link rel="stylesheet" href="#"
+              asp-fallback-href="~/lib/datatables/css/jquery.dataTables.min.css" asp-fallback-test-class="sr-only"
+              asp-fallback-test-property="position" asp-fallback-test-value="absolute" integrity=""
+              crossorigin="anonymous">
+        <link rel="stylesheet" href="#"
+              asp-fallback-href="~/lib/datatables/css/dataTables.bootstrap4.min.css" asp-fallback-test-class="sr-only"
+              asp-fallback-test-property="position" asp-fallback-test-value="absolute" integrity=""
+              crossorigin="anonymous">
+        <link rel="stylesheet" href="#"
+              asp-fallback-href="~/lib/font-awesome/css/all.min.css" asp-fallback-test-class="sr-only"
+              asp-fallback-test-property="position" asp-fallback-test-value="absolute" integrity=""
+              crossorigin="anonymous">
+        <link rel="stylesheet" href="#"
+              asp-fallback-href="~/lib/magnific-popup.js/magnific-popup.min.css" asp-fallback-test-class="sr-only"
+              asp-fallback-test-property="position" asp-fallback-test-value="absolute" integrity=""
+              crossorigin="anonymous">
+        <link rel="stylesheet" href="#"
+              asp-fallback-href="~/lib/OwlCarousel2/assets/owl.carousel.min.css" asp-fallback-test-class="sr-only"
+              asp-fallback-test-property="position" asp-fallback-test-value="absolute" integrity=""
+              crossorigin="anonymous">
+        <link rel="stylesheet" href="#"
+              asp-fallback-href="~/lib/OwlCarousel2/assets/owl.theme.default.min.css" asp-fallback-test-class="sr-only"
               asp-fallback-test-property="position" asp-fallback-test-value="absolute" integrity=""
               crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="~/css/site.css" />
@@ -40,7 +79,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                    <span>Tech</span>Solutions
+                    <span>Tech</span> Solutions
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,9 +109,14 @@
                                                                   asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
+    <script type="text/javascript" src="~/lib/aos/aos.js"></script>
+    <script type="text/javascript" src="~/lib/magnific-popup.js/jquery.magnific-popup.min.js"></script>
+    <script type="text/javascript" src="~/lib/OwlCarousel2/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
