--- a/Techtree/Views/Shared/_AdminMenuPartial.cshtml
+++ b/Techtree/Views/Shared/_AdminMenuPartial.cshtml
@@ -5,6 +5,6 @@
         <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Categories</a></li>
         <li><a class="dropdown-item" asp-area="Admin" asp-controller="CategoryItem" asp-action="Index"> Users To Categories </a></li>
         <div class="dropdown-divider"></div>
-        <li><a class="dropdown-item" href="#"> Media Types </a></li>
+        <li><a class="dropdown-item" asp-area="Admin" asp-controller="MediaType" asp-action="Index"> Media Types </a></li>
     </ul>
 </li>
