--- a/Techtree/Areas/Admin/Views/Category/Create.cshtml
+++ b/Techtree/Areas/Admin/Views/Category/Create.cshtml
@@ -9,29 +9,34 @@
 <h4>Category</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ThumbnailImage" class="control-label"></label>
-                <input asp-for="ThumbnailImage" class="form-control" />
-                <span asp-validation-for="ThumbnailImage" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+    <div class="col-md-6 mx-auto">
+        <div class="card p-4 border-success rounded shadow-lg">
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Title" class="font-weight-bold"></label>
+                    <input asp-for="Title" class="form-control" />
+                    <span asp-validation-for="Title" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Description" class="font-weight-bold"></label>
+                    <textarea asp-for="Description" class="form-control"></textarea>
+                    <span asp-validation-for="Description" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ThumbnailImage" class="font-weight-bold"></label>
+                    <input asp-for="ThumbnailImage" class="form-control" />
+                    <span asp-validation-for="ThumbnailImage" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-success">
+                        <i class="fa fa-save"></i> Add New Category
+                    </button>
+                </div>
+            </form>
+
+        </div>
+        </div>
 </div>
 
 <div>
