--- a/Techtree/Areas/Admin/Views/Content/Create.cshtml
+++ b/Techtree/Areas/Admin/Views/Content/Create.cshtml
@@ -15,17 +15,17 @@
             <input type="hidden" asp-for="CatItemId" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
+                <label asp-for="Title" class="font-weight-bold"></label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HtmlContent" class="control-label"></label>
+                <label asp-for="HtmlContent" class="font-weight-bold"></label>
                 <input asp-for="HtmlContent" class="form-control" />
                 <span asp-validation-for="HtmlContent" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="VideoLink" class="control-label"></label>
+                <label asp-for="VideoLink" class="font-weight-bold"></label>
                 <input asp-for="VideoLink" class="form-control" />
                 <span asp-validation-for="VideoLink" class="text-danger"></span>
             </div>
@@ -37,7 +37,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="CategoryItem" asp-action="Index" asp-route-categoryId="@Model.CategoryId">Back to List</a>
 </div>
 
 @section Scripts {
