--- a/Techtree/Areas/Admin/Views/MediaType/Edit.cshtml
+++ b/Techtree/Areas/Admin/Views/MediaType/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Techtree.Entities.Content
+﻿@model Techtree.Entities.MediaType
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,28 +6,22 @@
 
 <h1>Edit</h1>
 
-<h4>Content</h4>
+<h4>MediaType</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
-            <input type="hidden" asp-for="Id" />
-            <input type="hidden" asp-for="CategoryId" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HtmlContent" class="control-label"></label>
-                <input asp-for="HtmlContent" class="form-control" />
-                <span asp-validation-for="HtmlContent" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="VideoLink" class="control-label"></label>
-                <input asp-for="VideoLink" class="form-control" />
-                <span asp-validation-for="VideoLink" class="text-danger"></span>
+                <label asp-for="ThumbnailImage" class="control-label"></label>
+                <input asp-for="ThumbnailImage" class="form-control" />
+                <span asp-validation-for="ThumbnailImage" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
@@ -37,7 +31,7 @@
 </div>
 
 <div>
-    <a asp-controller="CategoryItem" asp-action="Index" asp-route-categoryId="@Model.CategoryId">Back to List</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
