--- a/Techtree/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Techtree/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -18,7 +18,8 @@
         <link rel="stylesheet" type="text/css" href="~/lib/bootstrap/css/bootstrap.css" />
         <link rel="stylesheet" type="text/css" href="~/lib/animate.css/animate.css" />
         <link rel="stylesheet" type="text/css" href="~/lib/aos/aos.css" />
-     <!--<link rel="stylesheet" type="text/css" href="~/lib/datatables/css/jquery.dataTables.css" />-->   
+        <link rel="stylesheet" type="text/css" href="~/lib/jquery-ui-1.12.1.custom/jquery-ui.min.css" />
+        <!--<link rel="stylesheet" type="text/css" href="~/lib/datatables/css/jquery.dataTables.css" />-->
         <link rel="stylesheet" type="text/css" href="~/lib/datatables/css/dataTables.bootstrap4.css" />
         <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.css" />
         <link rel="stylesheet" type="text/css" href="~/lib/magnific-popup.js/magnific-popup.css" />
@@ -111,6 +112,7 @@
     <script type="text/javascript" src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
     <script type="text/javascript" src="~/lib/aos/aos.js"></script>
+    <script type="text/javascript" src="~/lib/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
     <script type="text/javascript" src="~/lib/magnific-popup.js/jquery.magnific-popup.min.js"></script>
     <script type="text/javascript" src="~/lib/OwlCarousel2/owl.carousel.min.js"></script>
     <script type="text/javascript" src="~/js/site.js" asp-append-version="true"></script>
