--- a/Techtree/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Techtree/Areas/Identity/Pages/Account/Login.cshtml
@@ -24,15 +24,14 @@
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe">
-                            <input asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
+                    <div class="custom-control custom-switch">
+                        <input asp-for="Input.RememberMe" class="custom-control-input" id="customSwitch1">
+                        <label asp-for="Input.RememberMe" class="custom-control-label" for="customSwitch1">
+                            </label>
                     </div>
                 </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Log in</button>
+            <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Log in To Your Account</button>
                 </div>
                 <div class="form-group">
                     <p>
