--- a/Techtree/Views/Shared/_Layout.cshtml
+++ b/Techtree/Views/Shared/_Layout.cshtml
@@ -117,6 +117,8 @@
     <script type="text/javascript" src="~/lib/magnific-popup.js/jquery.magnific-popup.min.js"></script>
     <script type="text/javascript" src="~/lib/OwlCarousel2/owl.carousel.min.js"></script>
     <script type="text/javascript" src="~/js/site.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="~/js/login.js"></script>
+    <script type="text/javascript" src="~/js/register.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
