--- a/Techtree/Areas/Admin/Views/Category/Details.cshtml
+++ b/Techtree/Areas/Admin/Views/Category/Details.cshtml
@@ -9,26 +9,24 @@
 <div>
     <h4>Category</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ThumbnailImage)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ThumbnailImage)
-        </dd>
-    </dl>
+    <div class="row">
+        <div class="col-md-8 mx-auto">
+            <div class="card text-center">
+                <img src="@Model.ThumbnailImage" class="card-img" alt="...">
+                <div class="card-header">
+                    @Model.Title
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">@Model.CategoryItems</h5>
+                    <p class="card-text">@Model.Description</p>
+                    <a asp-controller="Category" asp-action="Index" class="btn btn-primary">All Categories</a>
+                </div>
+                @*<div class="card-footer text-muted">
+                        2 days ago
+                    </div>*@
+            </div>
+        </div>
+    </div>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
