--- a/Techtree/Areas/Admin/Views/CategoryItem/Create.cshtml
+++ b/Techtree/Areas/Admin/Views/CategoryItem/Create.cshtml
@@ -25,7 +25,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="MediaTypeId" class="font-weight-bold"></label>
-                    <select asp-for="MediaTypeId" class="form-control" asp-items="@Model.MediaTypes">
+                    <select asp-for="MediaTypeId" class="custom-select" asp-items="@Model.MediaTypes">
                         <option value=""> ---- Please Select A Mediatype ----</option>
                     </select>
                     <span asp-validation-for="MediaTypeId" class="text-danger"></span>
