--- a/Techtree/Areas/Admin/Views/MediaType/Details.cshtml
+++ b/Techtree/Areas/Admin/Views/MediaType/Details.cshtml
@@ -10,18 +10,16 @@
     <h4>MediaType</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ThumbnailImage)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ThumbnailImage)
-        </dd>
+        <div class="col-md-4 mx-auto">
+            <div class="card mb-3">
+                <img src="@Model.ThumbnailImage" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">@Model.Title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
     </dl>
 </div>
 <div>
