--- a/Techtree/Views/Shared/_Layout.cshtml
+++ b/Techtree/Views/Shared/_Layout.cshtml
@@ -118,7 +118,7 @@
     <script type="text/javascript" src="~/lib/OwlCarousel2/owl.carousel.min.js"></script>
     <script type="text/javascript" src="~/js/site.js" asp-append-version="true"></script>
     <script type="text/javascript" src="~/js/login.js"></script>
-    <script type="text/javascript" src="~/js/register.js"></script>
+    <script type="text/javascript" src="~/js/function.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
