--- a/Techtree/Views/Shared/_UserRegistrationPartial.cshtml
+++ b/Techtree/Views/Shared/_UserRegistrationPartial.cshtml
@@ -9,68 +9,86 @@
             </button>
         </div>
         <div class="modal-body">
-            <div id="alert_placeholder_register">
-            </div>
-            <form id="UserRegistrationForm" name="UserRegistrationForm" asp-controller="UserAuth" asp-action="RegisterUser">
+            <form id="UserRegistrationForm" method="post" name="UserRegistrationForm" asp-controller="UserAuth"
+                  asp-action="RegisterUser">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="RegistrationInValid">
-                <div class="form-group">
-                    <label asp-for="Email" class="font-weight-bold"></label>
-                    <input asp-for="Email" placeholder="Email Address" class="form-control">
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Password" class="font-weight-bold"></label>
-                    <input asp-for="Password" placeholder="Password" class="form-control">
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="ConfirmPassword" class="font-weight-bold"></label>
-                    <input asp-for="ConfirmPassword" placeholder="Confirm Password" class="form-control">
-                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="FirstName" class="font-weight-bold"></label>
-                    <input asp-for="FirstName" placeholder="First Name" class="form-control">
-                    <span asp-validation-for="FirstName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="LastName" class="font-weight-bold"></label>
-                    <input asp-for="LastName" placeholder="Last Name" class="form-control">
-                    <span asp-validation-for="LastName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Address1" class="font-weight-bold"></label>
-                    <input asp-for="Address1" placeholder="Address1" class="form-control">
-                    <span asp-validation-for="Address1" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Address2" class="font-weight-bold"></label>
-                    <input asp-for="Address2" placeholder="Address2" class="form-control">
-                    <span asp-validation-for="Address2" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="PostCode" class="font-weight-bold"></label>
-                    <input asp-for="PostCode" placeholder="Post Code" class="form-control">
-                    <span asp-validation-for="PostCode" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="PhoneNumber" class="font-weight-bold"></label>
-                    <input asp-for="PhoneNumber" placeholder="Phone Number" class="form-control">
-                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <div class="custom-control custom-switch">
-                        <input asp-for="AcceptUserAgreement" class="custom-control-input" id="UserAgreement">
-                        <label asp-for="AcceptUserAgreement" class="custom-control-label" for="UserAgreement"></label>
+                <div class="form-group row">
+                    <label asp-for="Email" class="col-md-4 col-form-label"></label>
+                    <div class="col-md-8">
+                        <input asp-for="Email" name="Email" placeholder="Email Address" class="form-control">
+                        <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                 </div>
-                <input type="hidden" asp-for="CategoryId" />
+                <div class="form-group row">
+                    <label asp-for="Password" class="col-md-4 col-form-label"></label>
+                    <div class="col-md-8">
+                        <input asp-for="Password" placeholder="Password" class="form-control">
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label asp-for="ConfirmPassword" class="col-md-4 col-form-label"></label>
+                    <div class="col-md-8">
+                        <input asp-for="ConfirmPassword" placeholder="Confirm Password" class="form-control">
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label asp-for="FirstName" class="col-md-4 col-form-label"></label>
+                    <div class="col-md-8">
+                        <input asp-for="FirstName" placeholder="First Name" class="form-control">
+                        <span asp-validation-for="FirstName" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label asp-for="LastName" class="col-md-4 col-form-label"></label>
+                    <div class="col-md-8">
+                        <input asp-for="LastName" placeholder="Last Name" class="form-control">
+                        <span asp-validation-for="LastName" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label asp-for="Address1" class="col-md-4 col-form-label"></label>
+                    <div class="col-md-8">
+                        <input asp-for="Address1" placeholder="Address1" class="form-control">
+                        <span asp-validation-for="Address1" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label asp-for="Address2" class="col-md-4 col-form-label"></label>
+                    <div class="col-md-8">
+                        <input asp-for="Address2" placeholder="Address2" class="form-control">
+                        <span asp-validation-for="Address2" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label asp-for="PostCode" class="col-md-4 col-form-label"></label>
+                    <div class="col-md-8">
+                        <input asp-for="PostCode" placeholder="Post Code" class="form-control">
+                        <span asp-validation-for="PostCode" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label asp-for="PhoneNumber" class="col-md-4 col-form-label"></label>
+                    <div class="col-md-8">
+                        <input asp-for="PhoneNumber" placeholder="Phone Number" class="form-control">
+                        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-sm-12">
+                        <div class="form-check">
+                            <input asp-for="AcceptUserAgreement" class="form-check-input">
+                            <label asp-for="AcceptUserAgreement" class="form-check-label">I accept the <a href="#">Terms of Use</a> and <a href="#">Privacy Policy</a></label>
+                        </div>
+                    </div>
+                </div>
             </form>
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button id="register" name="register" type="button" class="btn btn-primary">Register</button>
+            <button id="register" name="register" type="button" class="btn btn-success">Register Account</button>
         </div>
     </div>
 </div>
